<resources>
    <string name="app_name">Tm Property</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome To</string>
    <string name="nav_header_subtitle">Tm Property</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_property">Add Property</string>
    <string name="menu_my_list">My List</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_user">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_us_anything">ASK US ANYTHING</string>
    <string name="contact_us_bio">Our Doors are Wide Open For All. All Enquiries and Suggestions Are Welcome.The Contact Us page in TM Property provides users with a convenient means to connect with the app team. Users can utilize this page to seek assistance, ask questions, provide feedback, or report any issues encountered while using the app. The Contact Us page aims to foster open communication and ensure user satisfaction by offering direct channels for users to engage with the TM Property team.</string>
    <string name="call">GIVE US A CALL</string>
    <string name="phone_number">Feel Free To Give Us A Jingle On The Following Number</string>
    <string name="you_can_also_contact_us">You Can Also Contact Us With Our Official Mail</string>
    <string name="mail">Email: tmproperty225@gmail.com</string>
    <string name="tm_property">What Is Tm Property</string>
    <string name="tm_property2">Tm Property is a real estate market place in Bangladesh . Being an e-commerce property portal,we cater to the needs of those seeking real estate services,with a promise to deliver a high class service and make house finding and renting/buying process easier that ever.By offering the easiest platform enabling you to consume  property content in the comfort of their own surroundings,this enables anyone to buy,rent or sell properties in bangladesh</string>

    <string-array name="languages">
        <item>English</item>
        <item>Bangla</item>

    </string-array>

    <string-array name="theme">
        <item>Black</item>
        <item>White</item>

    </string-array>

    <string name="description">The TM property App connects you with a huge database of active properties from all over Bangladesh, allowing you to find apartments, plots, offices – whether for sale or for rent – on the go.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="intro">Find Your Dream Place At The Best Price</string>
    <string name="bio">The apartment has a floor space of 60 square meters </string>
    <string name="title">1750 Square Feet Pleasant Apartment is For Rent in Dhanmondi</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>