<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_property"
            android:icon="@drawable/ic_addpro"
            android:title="@string/menu_add_property" />
        <item
            android:id="@+id/nav_my_list"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_my_list" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_user"

            />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_conus"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"

            />

    </group>

    <!-- Separate group for the logout item -->





</menu>